Fixed typo for pyuic

--- a/templateclass/results.tmpl
+++ b/templateclass/results.tmpl
@@ -11,7 +11,7 @@ Your QGIS plugin directory is located at:<br>
 <b>What's Next</b>
 <ol>
     <li>Copy the entire directory containing your new plugin to the QGIS plugin directory
-    <li>Compile the ui file using puic4
+    <li>Compile the ui file using pyuic4
     <li>Compile the resources file using pyrcc4
     <li>Test the plugin by enabling it in the QGIS plugin manager
     <li>Customize it by editing the implementation file <b>${templateclass}.py</b>
