Changes to include author and email in metadata.txt and __init__.py

--- a/templateclass/__init__.tmpl
+++ b/templateclass/__init__.tmpl
@@ -41,6 +41,11 @@ def icon():
 def qgisMinimumVersion():
     return "$TemplateQgisVersion"
 
+def author():
+    return "$TemplateAuthor"
+
+def email():
+    return "$TemplateEmail"
 
 def classFactory(iface):
     # load $TemplateClass class from file $TemplateClass
