Revised naming to reduce confusion in terms

--- a/ui_pluginbuilder.ui
+++ b/ui_pluginbuilder.ui
@@ -126,7 +126,7 @@ p, li { white-space: pre-wrap; }
         </size>
        </property>
        <property name="text">
-        <string>Descriptive title</string>
+        <string>Plugin name</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
