Use plugin name as top-level menu

--- a/templateclass/TemplateClass.tmpl
+++ b/templateclass/TemplateClass.tmpl
@@ -63,7 +63,7 @@ class ${TemplateClass}:
 
         # Add toolbar button and menu item
         self.iface.addToolBarIcon(self.action)
-        self.iface.addPluginToMenu(u"&${TemplateDescription}", self.action)
+        self.iface.addPluginToMenu(u"&${TemplateTitle}", self.action)
 
     def unload(self):
         # Remove the plugin menu item and icon
