Add metadata.txt to extra files for make deploy.

--- a/templateclass/Makefile.tmpl
+++ b/templateclass/Makefile.tmpl
@@ -33,7 +33,7 @@ PLUGINNAME = ${templateclass}
 
 PY_FILES = ${templateclass}.py ${templateclass}dialog.py __init__.py
 
-EXTRAS = icon.png 
+EXTRAS = icon.png metadata.txt
 
 UI_FILES = ui_${templateclass}.py
 
