Use new style signal connections

--- a/templateclass/TemplateClass.tmpl
+++ b/templateclass/TemplateClass.tmpl
@@ -59,7 +59,7 @@ class ${TemplateClass}:
             QIcon(":/plugins/${PluginDirName}/icon.png"),
             u"$TemplateMenuText", self.iface.mainWindow())
         # connect the action to the run method
-        QObject.connect(self.action, SIGNAL("triggered()"), self.run)
+        self.action.triggered.connect(self.run)
 
         # Add toolbar button and menu item
         self.iface.addToolBarIcon(self.action)
