--- a/templateclass/TemplateClass.tmpl
+++ b/templateclass/TemplateClass.tmpl
@@ -27,6 +27,7 @@ from qgis.core import *
 import resources_rc
 # Import the code for the dialog
 from ${templateclass}dialog import ${TemplateClass}Dialog
+import os.path
 
 
 class ${TemplateClass}:
@@ -35,15 +36,12 @@ class ${TemplateClass}:
         # Save reference to the QGIS interface
         self.iface = iface
         # initialize plugin directory
-        self.plugin_dir = QFileInfo(QgsApplication.qgisUserDbFilePath()).path() + "/python/plugins/${templateclass}"
+        self.plugin_dir = os.path.dirname(__file__)
         # initialize locale
-        localePath = ""
         locale = QSettings().value("locale/userLocale").toString()[0:2]
+        localePath = os.path.join(self.plugin_dir, 'i18n', '${templateclass}_{}.qm'.format(locale))
 
-        if QFileInfo(self.plugin_dir).exists():
-            localePath = self.plugin_dir + "/i18n/${templateclass}_" + locale + ".qm"
-
-        if QFileInfo(localePath).exists():
+        if os.path.exists(localePath):
             self.translator = QTranslator()
             self.translator.load(localePath)
 
