--- a/templateclass/TemplateClass.tmpl
+++ b/templateclass/TemplateClass.tmpl
@@ -38,7 +38,7 @@ class ${TemplateClass}:
         # initialize plugin directory
         self.plugin_dir = os.path.dirname(__file__)
         # initialize locale
-        locale = QSettings().value("locale/userLocale").toString()[0:2]
+        locale = QSettings().value("locale/userLocale")[0:2]
         localePath = os.path.join(self.plugin_dir, 'i18n', '${templateclass}_{}.qm'.format(locale))
 
         if os.path.exists(localePath):
