--- a/templateclass/Makefile.tmpl
+++ b/templateclass/Makefile.tmpl
@@ -20,6 +20,8 @@
 # CONFIGURATION
 PLUGIN_UPLOAD = $$(CURDIR)/plugin_upload.py
 
+QGISDIR=.qgis2
+
 # Makefile for a PyQGIS plugin 
 
 # translation
@@ -56,31 +58,31 @@ compile: $$(UI_FILES) $$(RESOURCE_FILES)
 
 # The deploy  target only works on unix like operating system where
 # the Python plugin directory is located at:
-# $$HOME/.qgis/python/plugins
+# $$HOME/$(QGISDIR)/python/plugins
 deploy: compile doc transcompile
-	mkdir -p $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(PY_FILES) $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(UI_FILES) $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(RESOURCE_FILES) $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(EXTRAS) $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME)
-	cp -vfr i18n $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME)
-	cp -vfr $$(HELP) $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME)/help
+	mkdir -p $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vf $$(PY_FILES) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vf $$(UI_FILES) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vf $$(RESOURCE_FILES) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vf $$(EXTRAS) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vfr i18n $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vfr $$(HELP) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)/help
 
 # The dclean target removes compiled python files from plugin directory
 # also delets any .svn entry
 dclean:
-	find $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME) -iname "*.pyc" -delete
-	find $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME) -iname ".svn" -prune -exec rm -Rf {} \;
+	find $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname "*.pyc" -delete
+	find $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname ".svn" -prune -exec rm -Rf {} \;
 
 # The derase deletes deployed plugin
 derase:
-	rm -Rf $$(HOME)/.qgis/python/plugins/$$(PLUGINNAME)
+	rm -Rf $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
 
 # The zip target deploys the plugin and creates a zip file with the deployed
 # content. You can then upload the zip file on http://plugins.qgis.org
 zip: deploy dclean 
 	rm -f $$(PLUGINNAME).zip
-	cd $$(HOME)/.qgis/python/plugins; zip -9r $$(CURDIR)/$$(PLUGINNAME).zip $$(PLUGINNAME)
+	cd $$(HOME)/$(QGISDIR)/python/plugins; zip -9r $$(CURDIR)/$$(PLUGINNAME).zip $$(PLUGINNAME)
 
 # Create a zip package of the plugin named $$(PLUGINNAME).zip. 
 # This requires use of git (your plugin development directory must be a 
