--- a/templateclass/Makefile.tmpl
+++ b/templateclass/Makefile.tmpl
@@ -1,13 +1,13 @@
 #/***************************************************************************
 # $TemplateClass
-# 
+#
 # $TemplateDescription
 #                             -------------------
 #        begin                : $TemplateBuildDate
 #        copyright            : (C) $TemplateYear by $TemplateAuthor
 #        email                : $TemplateEmail
 # ***************************************************************************/
-# 
+#
 #/***************************************************************************
 # *                                                                         *
 # *   This program is free software; you can redistribute it and/or modify  *
@@ -22,12 +22,12 @@ PLUGIN_UPLOAD = $$(CURDIR)/plugin_upload.py
 
 QGISDIR=.qgis2
 
-# Makefile for a PyQGIS plugin 
+# Makefile for a PyQGIS plugin
 
 # translation
 SOURCES = ${templateclass}.py ui_${templateclass}.py __init__.py ${templateclass}dialog.py
 #TRANSLATIONS = i18n/${templateclass}_en.ts
-TRANSLATIONS = 
+TRANSLATIONS =
 
 # global
 
@@ -58,34 +58,34 @@ compile: $$(UI_FILES) $$(RESOURCE_FILES)
 
 # The deploy  target only works on unix like operating system where
 # the Python plugin directory is located at:
-# $$HOME/$(QGISDIR)/python/plugins
+# $$HOME/$$(QGISDIR)/python/plugins
 deploy: compile doc transcompile
-	mkdir -p $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(PY_FILES) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(UI_FILES) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(RESOURCE_FILES) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(EXTRAS) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vfr i18n $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vfr $$(HELP) $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)/help
+	mkdir -p $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vf $$(PY_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vf $$(UI_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vf $$(RESOURCE_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vf $$(EXTRAS) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vfr i18n $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	cp -vfr $$(HELP) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)/help
 
 # The dclean target removes compiled python files from plugin directory
 # also delets any .svn entry
 dclean:
-	find $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname "*.pyc" -delete
-	find $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname ".svn" -prune -exec rm -Rf {} \;
+	find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname "*.pyc" -delete
+	find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname ".svn" -prune -exec rm -Rf {} \;
 
 # The derase deletes deployed plugin
 derase:
-	rm -Rf $$(HOME)/$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+	rm -Rf $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
 
 # The zip target deploys the plugin and creates a zip file with the deployed
 # content. You can then upload the zip file on http://plugins.qgis.org
-zip: deploy dclean 
+zip: deploy dclean
 	rm -f $$(PLUGINNAME).zip
-	cd $$(HOME)/$(QGISDIR)/python/plugins; zip -9r $$(CURDIR)/$$(PLUGINNAME).zip $$(PLUGINNAME)
+	cd $$(HOME)/$$(QGISDIR)/python/plugins; zip -9r $$(CURDIR)/$$(PLUGINNAME).zip $$(PLUGINNAME)
 
-# Create a zip package of the plugin named $$(PLUGINNAME).zip. 
-# This requires use of git (your plugin development directory must be a 
+# Create a zip package of the plugin named $$(PLUGINNAME).zip.
+# This requires use of git (your plugin development directory must be a
 # git repository).
 # To use, pass a valid commit or tag as follows:
 #   make package VERSION=Version_0.3.2
@@ -115,5 +115,5 @@ clean:
 	rm $$(UI_FILES) $$(RESOURCE_FILES)
 
 # build documentation with sphinx
-doc: 
+doc:
 	cd help; make html
