Update help; pep8 compliance for generated files

--- a/templateclass/TemplateClassDialog.tmpl
+++ b/templateclass/TemplateClassDialog.tmpl
@@ -29,7 +29,7 @@ class ${TemplateClass}Dialog(QtGui.QDialog, Ui_${TemplateClass}):
     def __init__(self):
         QtGui.QDialog.__init__(self)
         # Set up the user interface from Designer.
-        # After setupUI you can access anu designer object by doing
+        # After setupUI you can access any designer object by doing
         # self.<objectname>, and you can use autoconnect slots - see
         # http://qt-project.org/doc/qt-4.8/designer-using-a-ui-file.html
         # #widgets-and-dialogs-with-auto-connect
