Refactored for PEP8, Pylint, multiple ui inheritance, clearer var names, file encoding, etc.

--- a/templateclass/TemplateClass.tmpl
+++ b/templateclass/TemplateClass.tmpl
@@ -86,7 +86,7 @@ class ${TemplateClass}:
         self.iface.removeToolBarIcon(self.action)
 
     def run(self):
-        """Run method that performs all the real work
+        """Run method that performs all the real work"""
         # show the dialog
         self.dlg.show()
         # Run the dialog event loop
