Refactored for PEP8, Pylint, multiple ui inheritance, clearer var names, file encoding, etc.

--- a/templateclass/TemplateClass.tmpl
+++ b/templateclass/TemplateClass.tmpl
@@ -19,14 +19,12 @@
  *                                                                         *
  ***************************************************************************/
 """
-# Import the PyQt and QGIS libraries
-from PyQt4.QtCore import *
-from PyQt4.QtGui import *
-from qgis.core import *
+from PyQt4.QtCore import QSettings, QTranslator, qVersion, QCoreApplication
+from PyQt4.QtGui import QAction, QIcon
 # Initialize Qt resources from file resources.py
 import resources_rc
 # Import the code for the dialog
-from ${templateclass}dialog import ${TemplateClass}Dialog
+from foodialog import FooDialog
 import os.path
 
 
@@ -47,20 +45,23 @@ class ${TemplateClass}:
         self.plugin_dir = os.path.dirname(__file__)
         # initialize locale
         locale = QSettings().value("locale/userLocale")[0:2]
-        localePath = os.path.join(
+        locale_path = os.path.join(
             self.plugin_dir,
             'i18n',
             '${templateclass}_{}.qm'.format(locale))
 
-        if os.path.exists(localePath):
+        if os.path.exists(locale_path):
             self.translator = QTranslator()
-            self.translator.load(localePath)
+            self.translator.load(locale_path)
 
             if qVersion() > '4.3.3':
                 QCoreApplication.installTranslator(self.translator)
 
         # Create the dialog (after translation) and keep reference
         self.dlg = ${TemplateClass}Dialog()
+
+        # Declare instance attributes
+        self.action = None
 
     def initGui(self):
         """Create the menu entries and toolbar icons inside the QGIS GUI."""
