--- a/templateclass/TemplateClassDialog.tmpl
+++ b/templateclass/TemplateClassDialog.tmpl
@@ -20,7 +20,7 @@
  ***************************************************************************/
 """
 
-from PyQt4 import QtCore, QtGui
+from PyQt4 import QtGui
 from ui_${templateclass} import Ui_${TemplateClass}
 # create the dialog for zoom to point
 
