--- a/templateclass/template_class_dialog.tmpl
+++ b/templateclass/template_class_dialog.tmpl
@@ -21,10 +21,10 @@
 """
 
 from PyQt4 import QtGui
-from ui_${templateclass} import Ui_${TemplateClass}
+from ui_${templateclass} import Ui_${TemplateClassDialogBase}
 
 
-class ${TemplateClass}Dialog(QtGui.QDialog, Ui_${TemplateClass}):
+class ${TemplateClass}Dialog(QtGui.QDialog, Ui_${TemplateClassDialog}Base):
     def __init__(self):
         """Constructor."""
         QtGui.QDialog.__init__(self)
