--- a/templateclass/Makefile.tmpl
+++ b/templateclass/Makefile.tmpl
@@ -26,7 +26,7 @@ QGISDIR=.qgis2
 # Makefile for a PyQGIS plugin
 
 # translation
-SOURCES = ${templateclass}.py ui_${templateclass}.py __init__.py ${templateclass}dialog.py
+SOURCES = ${templateclass}.py ${templateclass}.py __init__.py ${templateclass}dialog.py
 #TRANSLATIONS = i18n/${templateclass}_en.ts
 TRANSLATIONS =
 
@@ -49,89 +49,128 @@ default: compile
 compile: $$(UI_FILES) $$(RESOURCE_FILES)
 
 %_rc.py : %.qrc
-	pyrcc4 -o $$*_rc.py  $$<
+    pyrcc4 -o $$*_rc.py  $$<
 
 %.py : %.ui
-	pyuic4 -o $$@ $$<
+    pyuic4 -o $$@ $$<
 
 %.qm : %.ts
-	lrelease $$<
+    lrelease $$<
 
-# The deploy  target only works on unix like operating system where
-# the Python plugin directory is located at:
-# $$HOME/$$(QGISDIR)/python/plugins
+
 deploy: compile doc transcompile
-	mkdir -p $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(PY_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(UI_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(RESOURCE_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vf $$(EXTRAS) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vfr i18n $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
-	cp -vfr $$(HELP) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)/help
+    @echo
+    @echo "------------------------------------------"
+    @echo "Deploying plugin to your .qgis2 directory."
+    @echo "------------------------------------------"
+    # The deploy  target only works on unix like operating system where
+    # the Python plugin directory is located at:
+    # $$HOME/$$(QGISDIR)/python/plugins
+    mkdir -p $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+    cp -vf $$(PY_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+    cp -vf $$(UI_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+    cp -vf $$(RESOURCE_FILES) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+    cp -vf $$(EXTRAS) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+    cp -vfr i18n $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+    cp -vfr $$(HELP) $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)/help
 
 # The dclean target removes compiled python files from plugin directory
 # also delets any .svn entry
 dclean:
-	find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname "*.pyc" -delete
-	find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname ".svn" -prune -exec rm -Rf {} \;
+    @echo
+    @echo "-----------------------------------"
+    @echo "Removing any compiled python files."
+    @echo "-----------------------------------"
+    find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname "*.pyc" -delete
+    find $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME) -iname ".svn" -prune -exec rm -Rf {} \;
 
-# The derase deletes deployed plugin
+
 derase:
-	rm -Rf $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
+    @echo
+    @echo "-------------------------"
+    @echo "Removing deployed plugin."
+    @echo "-------------------------"
+    rm -Rf $$(HOME)/$$(QGISDIR)/python/plugins/$$(PLUGINNAME)
 
-# The zip target deploys the plugin and creates a zip file with the deployed
-# content. You can then upload the zip file on http://plugins.qgis.org
 zip: deploy dclean
-	rm -f $$(PLUGINNAME).zip
-	cd $$(HOME)/$$(QGISDIR)/python/plugins; zip -9r $$(CURDIR)/$$(PLUGINNAME).zip $$(PLUGINNAME)
+    @echo
+    @echo "---------------------------"
+    @echo "Creating plugin zip bundle."
+    @echo "---------------------------"
+    # The zip target deploys the plugin and creates a zip file with the deployed
+    # content. You can then upload the zip file on http://plugins.qgis.org
+    rm -f $$(PLUGINNAME).zip
+    cd $$(HOME)/$$(QGISDIR)/python/plugins; zip -9r $$(CURDIR)/$$(PLUGINNAME).zip $$(PLUGINNAME)
 
-# Create a zip package of the plugin named $$(PLUGINNAME).zip.
-# This requires use of git (your plugin development directory must be a
-# git repository).
-# To use, pass a valid commit or tag as follows:
-#   make package VERSION=Version_0.3.2
 package: compile
-		rm -f $$(PLUGINNAME).zip
-		git archive --prefix=$$(PLUGINNAME)/ -o $$(PLUGINNAME).zip $$(VERSION)
-		echo "Created package: $$(PLUGINNAME).zip"
+    # Create a zip package of the plugin named $$(PLUGINNAME).zip.
+    # This requires use of git (your plugin development directory must be a
+    # git repository).
+    # To use, pass a valid commit or tag as follows:
+    #   make package VERSION=Version_0.3.2
+    @echo
+    @echo "------------------------------------"
+    @echo "Exporting plugin to zip package.    "
+    @echo "------------------------------------"
+    rm -f $$(PLUGINNAME).zip
+    git archive --prefix=$$(PLUGINNAME)/ -o $$(PLUGINNAME).zip $$(VERSION)
+    echo "Created package: $$(PLUGINNAME).zip"
 
 upload: zip
+    @echo
+    @echo "-------------------------------------"
+    @echo "Uploading plugin to QGIS Plugin repo."
+    @echo "-------------------------------------"
 	$$(PLUGIN_UPLOAD) $$(PLUGINNAME).zip
 
-# transup
-# update .ts translation files
 transup:
+    @echo
+    @echo "------------------------------------------------"
+    @echo "Updating translation files with any new strings."
+    @echo "------------------------------------------------"
 	pylupdate4 Makefile
 
-# transcompile
-# compile translation files into .qm binary format
-transcompile: $$(TRANSLATIONS:.ts=.qm)
+transcompile:
+    @echo
+    @echo "----------------------------------------"
+    @echo "Compiled translation files to .qm files."
+    @echo "----------------------------------------"
+    $$(TRANSLATIONS:.ts=.qm)
 
-# transclean
-# deletes all .qm files
 transclean:
+    @echo
+    @echo "------------------------------------"
+    @echo "Removing compiled translation files."
+    @echo "------------------------------------"
 	rm -f i18n/*.qm
 
 clean:
-	rm $$(UI_FILES) $$(RESOURCE_FILES)
+    @echo
+    @echo "------------------------------------"
+    @echo "Removing uic and rcc generated files"
+    @echo "------------------------------------"
+    rm $$(UI_FILES) $$(RESOURCE_FILES)
 
-# build documentation with sphinx
 doc:
-	cd help; make html
+    @echo
+    @echo "------------------------------------"
+    @echo "Building documentation using sphinx."
+    @echo "------------------------------------"
+    cd help; make html
 
 pylint:
-        @echo
-        @echo "-----------------"
-        @echo "Pylint violations"
-        @echo "-----------------"
-        @pylint --reports=n --rcfile=pylintrc safe . || true
+    @echo
+    @echo "-----------------"
+    @echo "Pylint violations"
+    @echo "-----------------"
+    @pylint --reports=n --rcfile=pylintrc safe . || true
 
 
 # Run pep8 style checking
 #http://pypi.python.org/pypi/pep8
 pep8:
-        @echo
-        @echo "-----------"
-        @echo "PEP8 issues"
-        @echo "-----------"
-        @pep8 --repeat --ignore=E203,E121,E122,E123,E124,E125,E126,E127,E128 --exclude pydev,template_class_dialog_base.py,resources_rc.py . || true
+    @echo
+    @echo "-----------"
+    @echo "PEP8 issues"
+    @echo "-----------"
+    @pep8 --repeat --ignore=E203,E121,E122,E123,E124,E125,E126,E127,E128 --exclude pydev,template_class_dialog_base.py,resources_rc.py . || true
