--- a/plugin_template/readme.tmpl
+++ b/plugin_template/readme.tmpl
@@ -18,11 +18,11 @@ What's Next:
   * Test the plugin by enabling it in the QGIS plugin manager
 
   * Customize it by editing the implementation file:
-         ${templateclass}.py
+         ${TemplateClass}.py
 
   * Create your own custom icon, replacing the default icon.png
 
-  * Modify your user interface by opening ${templateclass}.ui
+  * Modify your user interface by opening ${TemplateClass}.ui
     in Qt Designer (don't forget to compile it with pyuic4 after changing it)
 
   * You can use the Makefile to compile your Ui and resource files when
