--- a/plugin_template/resources.tmpl
+++ b/plugin_template/resources.tmpl
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/plugins/${templateclass}" >
+    <qresource prefix="/plugins/${TemplateClass}" >
         <file>icon.png</file>
     </qresource>
 </RCC>
