--- a/plugin_template/help/source/index.rst.tmpl
+++ b/plugin_template/help/source/index.rst.tmpl
@@ -1,9 +1,9 @@
-.. ${templateclass} documentation master file, created by
+.. ${TemplateClass} documentation master file, created by
    sphinx-quickstart on Sun Feb 12 17:11:03 2012.
    You can adapt this file completely to your liking, but it should at least
    contain the root `toctree` directive.
 
-Welcome to ${templateclass}'s documentation!
+Welcome to ${TemplateClass}'s documentation!
 ============================================
 
 Contents:
