Adding some helper scripts and make test target added.

--- a/plugin_template/Makefile.tmpl
+++ b/plugin_template/Makefile.tmpl
@@ -67,6 +67,18 @@ compile: $$(COMPILED_UI_FILES) $$(COMPILED_RESOURCE_FILES)
 %.qm : %.ts
 	lrelease $$<
 
+test: compile
+	@echo
+	@echo "----------------------"
+	@echo "Regression Test Suite"
+	@echo "----------------------"
+
+	@# Preceding dash means that make will continue in case of errors
+	@-export PYTHONPATH=`pwd`:$(PYTHONPATH); \
+		export QGIS_DEBUG=0; \
+		export QGIS_LOG_FILE=/dev/null; \
+		nosetests -v --with-id --with-coverage --cover-package=. \
+		3>&1 1>&2 2>&3 3>&- || true
 
 deploy: compile doc transcompile
 	@echo
