--- a/plugin_template/readme.tmpl
+++ b/plugin_template/readme.tmpl
@@ -11,14 +11,12 @@ What's Next:
   * Copy the entire directory containing your new plugin to the QGIS plugin
     directory
 
-  * Compile the ui file using pyuic4
-
   * Compile the resources file using pyrcc4
 
   * Test the plugin by enabling it in the QGIS plugin manager
 
   * Customize it by editing the implementation file:
-         ${TemplateClass}.py
+         ${TemplateModuleName}.py
 
   * Create your own custom icon, replacing the default icon.png
 
