Tweaked wording of readme files (no need any more for uic).

--- a/plugin_template/readme.tmpl
+++ b/plugin_template/readme.tmpl
@@ -13,15 +13,15 @@ What's Next:
 
   * Compile the resources file using pyrcc4
 
+  * Run the tests (``make test``)
+
   * Test the plugin by enabling it in the QGIS plugin manager
 
-  * Customize it by editing the implementation file:
-         ${TemplateModuleName}.py
+  * Customize it by editing the implementation file: ``${TemplateModuleName}.py``
 
   * Create your own custom icon, replacing the default icon.png
 
-  * Modify your user interface by opening ${TemplateClass}.ui
-    in Qt Designer (don't forget to compile it with pyuic4 after changing it)
+  * Modify your user interface by opening ${TemplateClass}.ui in Qt Designer
 
   * You can use the Makefile to compile your Ui and resource files when
     you make changes. This requires GNU make (gmake)
