PEP8 and Pylint fixes

--- a/plugin_template/Makefile.tmpl
+++ b/plugin_template/Makefile.tmpl
@@ -181,7 +181,7 @@ pylint:
 	@echo "-----------------"
 	@echo "Pylint violations"
 	@echo "-----------------"
-	@pylint --reports=n --rcfile=pylintrc safe . || true
+	@pylint --reports=n --rcfile=pylintrc . || true
 
 
 # Run pep8 style checking
