Removed obsolete reference to uic compilation.

--- a/plugin_template/results.tmpl
+++ b/plugin_template/results.tmpl
@@ -17,8 +17,7 @@ Your QGIS plugin directory is located at:<br>
     <li>Test the plugin by enabling it in the QGIS plugin manager
     <li>Customize it by editing the implementation file <b>${TemplateClass}.py</b>
     <li>Create your own custom icon, replacing the default <b>icon.png</b>
-    <li>Modify your user interface by opening <b>${TemplateClass}.ui</b> in Qt
-    Designer (don't forget to compile it with pyuic4 after changing it)
+    <li>Modify your user interface by opening <b>${TemplateClass}.ui</b> in Qt Designer
     <li>You can use the <b>Makefile</b> to compile your resource files when you
         make changes. This requires GNU make (gmake)
 </ul>
