Pylint fixes for tempalte

--- a/plugin_template/__init__.tmpl
+++ b/plugin_template/__init__.tmpl
@@ -22,15 +22,13 @@
 """
 
 
-# pylint: disable=C0103
 # noinspection PyPep8Naming
-def classFactory(iface):
+def classFactory(iface):  #pylint: disable=invalid-name
     """Load ${TemplateClass} class from file ${TemplateClass}.
 
     :param iface: A QGIS interface instance.
     :type iface: QgsInterface
     """
     #
-    from ${TemplateModuleName} import ${TemplateClass}
+    from .${TemplateModuleName} import ${TemplateClass}
     return ${TemplateClass}(iface)
-# pylint: enable=C0103
