--- a/plugin_template/module_name.tmpl
+++ b/plugin_template/module_name.tmpl
@@ -67,7 +67,7 @@ class ${TemplateClass}:
         """Create the menu entries and toolbar icons inside the QGIS GUI."""
         # Create action that will start plugin configuration
         self.action = QAction(
-            QIcon(":/plugins/${PluginDirectoryName}/icon.png"),
+            QIcon(":/plugins/${TemplateClass}/icon.png"),
             u"$TemplateMenuText",
             self.iface.mainWindow())
         # connect the action to the run method
